--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@types/qrcode": "^1.5.6",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "mongodb": "^7.0.0",
     "next": "16.0.1",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
