--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+# Fotos de corretores
+public/corretores/*
+!public/corretores/.gitkeep
