--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "date-fns": "^4.1.0",
+    "firebase": "^12.5.0",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^11.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
     "next": "16.0.1",
-    "next-auth": "^5.0.0-beta.30",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
