feat: adiciona logos Habitvs com efeito pulse em rodapés e documentos
- Adiciona componente Footer reutilizável com logos Habitvs
- Implementa efeito pulse atrativo no logo Habitvs
- Adiciona logos em todos os rodapés (home, área do cliente, cadastro, dashboard)
- Inclui logo Habitvs em PDFs gerados
- Adiciona logo Habitvs em preview de recibos
- Cria seeds completos para MongoDB e Firebase
- Atualiza scripts de limpeza e seed
- Configura Firebase Admin SDK com suporte a credenciais
- Adiciona documentação completa de seeds e configuração Firebase

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,11 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# Firebase Service Account (NUNCA commitar)
+firebase-service-account.json
+*-firebase-adminsdk*.json
+firebase-adminsdk-*.json
+
 # vercel
 .vercel
 
